Resim ekleyebilme imkanı kuralları ve file manager core da eklendi .

--- a/Core/Core.csproj
+++ b/Core/Core.csproj
@@ -14,4 +14,15 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="7.0.11" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Helpers\FileHelper\" />
+    <Folder Include="Helpers\GuideHelper\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Reference Include="Microsoft.AspNetCore.Http.Features">
+      <HintPath>..\..\..\..\..\..\Program Files\dotnet\shared\Microsoft.AspNetCore.App\7.0.10\Microsoft.AspNetCore.Http.Features.dll</HintPath>
+    </Reference>
+  </ItemGroup>
+
 </Project>
