--- a/WebAPI/appsettings.json
+++ b/WebAPI/appsettings.json
@@ -1,9 +1,15 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
-  },
-  "AllowedHosts": "*"
+	"TokenOptions": {
+		"Audience": "omer@omer.com",
+		"Issuer": "omer@omer.com",
+		"AccessTokenExpiration": 10, //tokenin dakika cinsinden ne kadar süre kullanılacağını belirler.
+		"SecurityKey": "mysupersecretkeymysupersecretkey"
+	},
+	"Logging": {
+		"LogLevel": {
+			"Default": "Information",
+			"Microsoft.AspNetCore": "Warning"
+		}
+	},
+	"AllowedHosts": "*"
 }
